changed contact  image

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
                     <div class="contact-info">
                         <div class="contact-header">
                             <h1 class="contact-title">Contact Me: </h1>
-                            <img src="\images\contact.jpg" alt="Contact illustration">
+                            <img src="images/contact.jpg" alt="Contact illustration">
                         </div>
                         
                         <div class="contact-content">
