--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="timeline-item">
                     <h3>Full Stack Web Development</h3>
                     <div class="institution">Delta Batch (Apna College)</div>
-                    <p>Completed the Full Stack Web Development course from Apna College, gaining proficiency in building full-fledged web applications. .</p>
+                    <p>Completed the Full Stack Web Development course from Apna College, gaining proficiency in building full-fledged web applications.</p>
                     <div class="course-badge">Skills Gained : JavaScript, Bootstrap, Node.js, Express, EJS, MongoDB, RESTful APIs</div>
                 </div>
                 <div class="timeline-item">
@@ -213,7 +213,7 @@
                 <div class="timeline-item">
                     <h3>Full Stack Web Development Training</h3>
                     <div class="institution">Internshala (Issued on 13-06-2024)</div>
-                    <p>Completed a 8-weeks long training program from Internshala covering various aspects of full stack web development using various technologies</p>
+                    <p>Completed a 8-weeks long training program from Internshala covering various aspects of full stack web development using various technologies.</p>
                     <div class="course-badge">Skills Gained : HTML, CSS, Bootstrap, DBMS, MySQL, JS,
                         React</div>
                 </div>
@@ -259,7 +259,7 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
             </div>
           <div class="achievement">
             <h3>Ranked 38306 in JEE Mains Examination</h3>
-            <p>Secured a top 4 percentile rank 38306 out of [9,39,008 candidates] in JEE Mains Examination</p>
+            <p>Secured a top 4 percentile rank 38306 out of [9,39,008 candidates] in JEE Mains Examination.</p>
           </div>
         </div>
         <div class="achievement-line">
