--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio: Adeesh-Singhai</title>
 
+    <!-- <link rel="icon" type="image/x-icon" href="path-to-your-icon.ico"> -->
+
+
+    <link rel="icon" type="image/png" href="/images/Picture1.png">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
