changed nav img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="header">
         <nav>
-            <img src="images/Adeesh..png" class="logo" alt="">
+            <img src="images/nav-image.jpeg" class="logo" alt="">
             <ul id="sidemenu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about-body">About</a></li>
