handled about nav for responsive design

--- a/index.html
+++ b/index.html
@@ -167,11 +167,25 @@
             <a href="/images/Resume_Adeesh_Singhai_0801IT211004.pdf" download="Resume_Adeesh_Singhai" class="download-icon" title="Download Resume">↓</a>
         </div>
     </div>
-    <nav class="about-nav">
+    <!-- <nav class="about-nav">
         <a href="#education" class="about-nav-item">Education</a>
         <a href="#skills" class="about-nav-item">Professional Skills</a>
         <a href="#experience" class="about-nav-item active">Experience</a>
         <a href="#achievements" class="about-nav-item">Achievements</a>
+    </nav> -->
+
+    <nav class="about-nav">
+        <button class="menu-btn" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <div class="about-nav-items">
+            <a href="#education" class="about-nav-item">Education</a>
+            <a href="#skills" class="about-nav-item">Professional Skills</a>
+            <a href="#experience" class="about-nav-item">Experience</a>
+            <a href="#achievements" class="about-nav-item">Achievements</a>
+        </div>
     </nav>
 <div id="education" class="section active education-border">
     <div class="education-container">
