added cursor effect

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
 
+    <canvas id="canvas"></canvas>
+    <div class="content">
+
     <div id="header">
         <nav>
             <img src="images/ni2.jpeg" class="logo" alt="">
@@ -421,6 +424,8 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
         <div class="copyright">
             <p>Copyright © 2024. All rights reserved.</p>
         </div>
+    </div>
+
     </div>
     <script src="script.js"></script>    
 </body>
