added polygon effect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
 
-    <canvas id="canvas"></canvas>
+    <div class="cursor-tracer"></div>
+
+    <!-- <canvas id="canvas"></canvas> -->
     <div class="content">
 
     <div id="header">
