tried to put geometric effect all over body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="cursor-tracer"></div>
+    <div class="cursor-tracer">
     <div class="content">
 
     <div id="header">
@@ -421,6 +421,7 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
             <p>Copyright © 2024. All rights reserved.</p>
         </div>
     </div>
+</div>
 
     </div>
     <script src="script.js"></script>    
