tried to put geometric effect all over body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="cursor-tracer">
+    <div class="cursor-tracer"> </div>
     <div class="content">
 
     <div id="header">
@@ -423,7 +423,7 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
     </div>
 </div>
 
-    </div>
+   
     <script src="script.js"></script>    
 </body>
 </html>
