--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
     <section class="achievements">
       <div class="accolades">
         <h2>Accolades</h2>
-        <div class="timeline">
+        <div class="achievement-timeline">
           <div class="achievement-line">
             <div class="timeline-bullet"></div>
             <div class="timeline-connector"></div>
@@ -304,7 +304,7 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
       </div>
       <div class="extracurricular">
         <h2>Extracurricular</h2>
-        <div class="timeline">
+        <div class="achievement-timeline">
           <div class="achievement-line">
             <div class="timeline-bullet"></div>
             <div class="timeline-connector"></div>
