--- a/index.html
+++ b/index.html
@@ -277,24 +277,24 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
         <h2>Accolades</h2>
         <div class="achievement-timeline">
           <div class="achievement-line">
-            <div class="timeline-bullet"></div>
-            <div class="timeline-connector"></div>
+            <div class="achievement-timeline-bullet"></div>
+            <div class="achievement-timeline-connector"></div>
             <div class="achievement">
               <h3>Ranked 38306 in JEE Mains Examination</h3>
               <p>Secured a top 4 percentile rank 38306 out of [9,39,008 candidates] in JEE Mains Examination.</p>
             </div>
           </div>
           <div class="achievement-line">
-            <div class="timeline-bullet"></div>
-            <div class="timeline-connector"></div>
+            <div class="achievement-timeline-bullet"></div>
+            <div class="achievement-timeline-connector"></div>
             <div class="achievement">
               <h3>Young Jaina Award (2021)</h3>
               <p>Recipient of All India Young Jaina Award for exceptional performance in 12th grade.</p>
             </div>
           </div>
           <div class="achievement-line">
-            <div class="timeline-bullet"></div>
-            <div class="timeline-connector"></div>
+            <div class="achievement-timeline-bullet"></div>
+            <div class="achievement-timeline-connector"></div>
             <div class="achievement">
               <h3>Problem Solving</h3>
               <p>Solved 200+ coding problems on various coding platforms like Leetcode ,Coding Ninjas, Geek for geeks.</p>
@@ -306,16 +306,16 @@ Instructed college students in a DSA Bootcamp organized by the Coding Club of th
         <h2>Extracurricular</h2>
         <div class="achievement-timeline">
           <div class="achievement-line">
-            <div class="timeline-bullet"></div>
-            <div class="timeline-connector"></div>
+            <div class="achievement-timeline-bullet"></div>
+            <div class="achievement-timeline-connector"></div>
             <div class="achievement">
               <h3>Inter Regional Painting Competition</h3>
               <p>Achieved 2nd position in the Regional Level Painting Competition held by Kendriya Vidyalaya Sangathan in the Bhopal region. Demonstrated creativity and skill in visual arts, competing against talented participants from multiple schools.</p>
             </div>
           </div>
           <div class="achievement-line">
-            <div class="timeline-bullet"></div>
-            <div class="timeline-connector"></div>
+            <div class="achievement-timeline-bullet"></div>
+            <div class="achievement-timeline-connector"></div>
             <div class="achievement">
               <h3>Inter Branch Chess Competition</h3>
               <p>Contributed as a team member to secure 2nd position in an inter-branch chess tournament. Collaborated strategically with teammates, demonstrating strong analytical skills and teamwork under competitive pressure. Recognized for dedication and sportsmanship throughout the event.</p>
